force-app/main/default/objects/Discount__c/Discount__c.object-meta.xml
<CustomObject>
    <description>Défini les promotions applicable pour chaque produit et par territoire de vente.
Promotion gérée par le marketing.</description>
    <label>Promotion</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>