force-app/main/default/objects/Discount__c/fields/discountPercent__c.field-meta.xml
<CustomField>
    <fullName>discountPercent__c</fullName>
    <description>Promotion en %</description>
    <label>Remise (%)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>