force-app/main/default/objects/Discount__c/fields/endDate__c.field-meta.xml
<CustomField>
    <fullName>endDate__c</fullName>
    <description>Date de fin de la promotion.</description>
    <label>Date de fin de validité</label>
    <required>true</required>
    <type>Date</type>
</CustomField>