force-app/main/default/objects/Discount__c/fields/KparKReference__c.field-meta.xml
<CustomField>
    <fullName>KparKReference__c</fullName>
    <description>ID unique externe de la promotion</description>
    <externalId>true</externalId>
    <label>Référence</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>