force-app/main/default/objects/Discount__c/fields/order__c.field-meta.xml
<CustomField>
    <fullName>order__c</fullName>
    <description>Priorité de la promotion par rapport aux autres.
Une valeur petite indique que la promotion est prioritaire.</description>
    <inlineHelpText>Priorité de la promotion par rapport aux autres.
Plus la valeur est petite, plus la promotion est prioritaire.</inlineHelpText>
    <label>Ordre</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>