force-app/main/default/objects/Discount__c/fields/originLineCount__c.field-meta.xml
<CustomField>
    <fullName>originLineCount__c</fullName>
    <label>[#] Nb Lignes source</label>
    <summaryFilterItems>
        <field>DiscountLine__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Promotion sur source</value>
    </summaryFilterItems>
    <summaryForeignKey>DiscountLine__c.discount__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>