force-app/main/default/objects/Discount__c/fields/perimeter__c.field-meta.xml
<CustomField>
    <fullName>perimeter__c</fullName>
    <label>Périmètre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Produit parent</fullName>
            </value>
            <value>
                <fullName>Produit parent avec options</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>