force-app/main/default/objects/Discount__c/fields/sponsorshipDiscount__c.field-meta.xml
<CustomField>
    <fullName>sponsorshipDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permet d&apos;identifier une promotion de type Parrainage pour le processus de sélection des promotions</description>
    <inlineHelpText>Cocher si la promotion est spécifique à une promotion parrainage.
Indique qu&apos;elle sera appliquée une seule fois sur un devis.</inlineHelpText>
    <label>Parrainage</label>
    <type>Checkbox</type>
</CustomField>