force-app/main/default/objects/Discount__c/fields/stageName__c.field-meta.xml
<CustomField>
    <fullName>stageName__c</fullName>
    <label>Étape</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Active</valueSetName>
    </valueSet>
</CustomField>