force-app/main/default/objects/Discount__c/fields/startDate__c.field-meta.xml
<CustomField>
    <fullName>startDate__c</fullName>
    <description>Date de début de la promotion</description>
    <label>Date de début de validité</label>
    <required>true</required>
    <type>Date</type>
</CustomField>