force-app/main/default/objects/Discount__c/fields/valuationUnit__c.field-meta.xml
<CustomField>
    <fullName>valuationUnit__c</fullName>
    <formula>IF(discountAmount__c&gt;0,
			&quot;Montant&quot;,
			&quot;Pourcentage&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unité de valorisation</label>
    <type>Text</type>
</CustomField>