force-app/main/default/objects/Discount__c/recordTypes/Discount.recordType-meta.xml
<RecordType>
    <fullName>Discount</fullName>
    <active>true</active>
    <description>Ce record type est utilisé pour gérer les promotions</description>
    <label>Promotion</label>
</RecordType>