force-app/main/default/objects/Discount__c/validationRules/VR_K3_Discount_AtLeastEURorPERCENT.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_Discount_AtLeastEURorPERCENT</fullName>
    <active>true</active>
    <description>Vous devez entrer une remise en € ou en %</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
(
				(
				    (discountAmount__c = 0 || ISNULL(discountAmount__c)) &amp;&amp;
        (discountPercent__c = 0 || ISNULL(discountPercent__c))
    )
) ||
(NOT(ISNULL(discountPercent__c)) &amp;&amp; NOT(ISNULL(discountAmount__c)))</errorConditionFormula>
    <errorMessage>Vous devez entrer une remise en € ou en %.
Vous devez choisir de remplir au moins l&apos;un ou l&apos;autre des champs pour sauvegarder.</errorMessage>
</ValidationRule>