force-app/main/default/objects/Discount__c/validationRules/VR_K3_Discount_EndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_Discount_EndDate</fullName>
    <active>true</active>
    <description>La date de fin de validité doit être supérieure ou égale à la date de début de validité</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
endDate__c &lt; startDate__c</errorConditionFormula>
    <errorDisplayField>endDate__c</errorDisplayField>
    <errorMessage>La date de fin de validité doit être supérieure ou égale à la date de début de validité !</errorMessage>
</ValidationRule>