force-app/main/default/objects/Discount__c/validationRules/VR_K3_Discount_OrderMustBePositive.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_Discount_OrderMustBePositive</fullName>
    <active>true</active>
    <description>L&apos;ordre doit être strictement positif.</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
order__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>order__c</errorDisplayField>
    <errorMessage>L&apos;ordre doit être strictement positif.</errorMessage>
</ValidationRule>