force-app/main/default/objects/Discount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>active__c</columns>
    <columns>startDate__c</columns>
    <columns>endDate__c</columns>
    <columns>discountAmount__c</columns>
    <columns>discountPercent__c</columns>
    <columns>order__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>